git-svn-id: http://svn.vdombox.ru/flextools/trunk@4907 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01Core/src/net/vdombox/ide/view/components/MainScreen.mxml
+++ b/IDE/v.01Core/src/net/vdombox/ide/view/components/MainScreen.mxml
@@ -5,18 +5,18 @@
 	creationPolicy="all" height="100%" minHeight="600" minWidth="800" width="100%">
 	<components:MainTitleBar 
 		width="100%"/>
-	<mx:TabBar 
+	<mx:TabBar
 		id="mainTabBar"
+		styleName="mainTabBar"
+		height="18" horizontalAlign="left"
 		
-		height="30" width="100%"
-		
-		top="50"/>
+		top="32" left="150"/>
 	<mx:ViewStack 
 		id="componentsStack"
 		
 		creationPolicy="all" height="100%" width="100%"
 		
-		top="80">
+		top="70">
 		<components:ApplicationsManagment 
 			id="applicationsManagment"/>
 		<components:ModulesManagment 
