--- a/IDE/v.01Core/_src/theme/css/mainWindow.css
+++ b/IDE/v.01Core/_src/theme/css/mainWindow.css
@@ -7,29 +7,36 @@ MainTitleBar
 {
 	backgroundImage: Embed(source="theme.swf", symbol="MainTitleBarBackground");
 	backgroundSize: "100%";
-	
 	minimizeButton: Embed(source="theme.swf", symbol="MinimizeButton");
 	maximizeButton: Embed(source="theme.swf", symbol="MaximizeButton");
 	closeButton: Embed(source="theme.swf", symbol="CloseButton");
 	restoreButton: Embed(source="theme.swf", symbol="RestoreButton");
 }
 
-.mainTabBar {
-		
+.mainTabBar
+{	
+	horizontalGap: 1;
+	selectedTabTextStyleName : "selectedTabStyle";
 	tabStyleName: "tabStyle";
 }
 
-.tabStyle {
+.selectedTabStyle
+{
+	color: #FFFFFF;
+}
+
+.tabStyle
+{	
+	color: #969696;
+	textRollOverColor: #FFFFFF;
+	textSelectedColor: #FFFFFF;
+	upSkin: Embed(source="theme.swf", symbol="TabUpSkin");
+	overSkin: Embed(source="theme.swf", symbol="TabOverSkin");
+	downSkin: Embed(source="theme.swf", symbol="TabDownSkin");
+	disabledSkin: Embed(source="theme.swf", symbol="TabDisabledSkin");
 	
-	color: #444444;
-	textRollOverColor: #444444;
-	upSkin: Embed(source="theme.swf", symbol="TabUpSkinTop");
-	overSkin: Embed(source="theme.swf", symbol="TabOverSkinTop");
-	downSkin: Embed(source="theme.swf", symbol="TabDownSkinTop");
-	disabledSkin: Embed(source="theme.swf", symbol="TabDisabledSkinTop");
-	
-	selectedUpSkin: Embed(source="theme.swf", symbol="TabSelectedUpSkinTop");
-	selectedOverSkin: Embed(source="theme.swf", symbol="TabSelectedOverSkinTop");
-	selectedDownSkin: Embed(source="theme.swf", symbol="TabSelectedDownSkinTop");
-	selectedDisabledSkin: Embed(source="theme.swf", symbol="TabSelectedDisabledSkinTop");
+	selectedUpSkin: Embed(source="theme.swf", symbol="TabSelectedUpSkin");
+	selectedOverSkin: Embed(source="theme.swf", symbol="TabSelectedOverSkin");
+	selectedDownSkin: Embed(source="theme.swf", symbol="TabSelectedDownSkin");
+	selectedDisabledSkin: Embed(source="theme.swf", symbol="TabSelectedDisabledSkin");
 }
