git-svn-id: http://svn.vdombox.ru/flextools/trunk@4917 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01Core/_src/theme/css/mainWindow.css
+++ b/IDE/v.01Core/_src/theme/css/mainWindow.css
@@ -40,3 +40,16 @@ MainTitleBar
 	selectedDownSkin: Embed(source="theme.swf", symbol="TabSelectedDownSkin");
 	selectedDisabledSkin: Embed(source="theme.swf", symbol="TabSelectedDisabledSkin");
 }
+
+.buttonBar
+{
+	backgroundImage: Embed(source="theme.swf", symbol="ButtonBarBackground");
+	backgroundSize: "100%";
+}
+
+.vdomLogo
+{
+	borderSkin: ClassReference("net.vdombox.ide.view.skins.HalloBorderWithImagePositioning");
+	backgroundImage: Embed(source="theme.swf", symbol="VDOMLogo");
+	backgroundPosition: right,bottom;
+}
