git-svn-id: http://svn.vdombox.ru/flextools/trunk@4922 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/Import.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/Import.mxml
@@ -6,7 +6,9 @@
 	xmlns:importClasses="PowerPack.com.dialog.importClasses.*"
 	width="450" height="460"
 	title="{LanguageManager.sentences.lbl_import}" 
-	close="ConnectionManager.instance.window = null">
+	close="ConnectionManager.instance.window = null"
+	>
+
 	
 	<mx:Script>
 		<![CDATA[
@@ -95,7 +97,7 @@
 							
 								ConnectionManager.endpointURI = step1.txtHost.text + ":" + 
 									(step1.radDefPort.selected ? ContextManager.instance.default_port : step1.txtPort.text) + 
-									"/SOAP"
+									"/SOAP";
 											
 								ConnectionManager.exec('list_applications', getAppListHandler); 								
 							}
