--- a/PowerPack/v.01/ExtendedAPI/ExtendedAPI/com/controls/FileBrowseBox.mxml
+++ b/PowerPack/v.01/ExtendedAPI/ExtendedAPI/com/controls/FileBrowseBox.mxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" horizontalGap="4" horizontalAlign="right" xmlns:events="flash.events.*"
-	initialize="text=memPath;">
-	
+<mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" 
+	xmlns:events="flash.events.*"
+	horizontalGap="4" 
+	horizontalAlign="right" 
+	disabledOverlayAlpha="0.0"
+	preinitialize="onPreinitialize(event)"
+	childAdd="onChildAdd(event)">
+
 	<mx:String id="browseTitle">Select file...</mx:String>
 	<mx:String id="browseLabel">Browse...</mx:String>
-	<mx:String id="text"></mx:String>
-	<mx:String id="mode">open</mx:String>
 	<mx:String id="filterAll">All</mx:String>
+	<mx:String id="mode">{MODE_OPEN}</mx:String>
+	<mx:String id="text"></mx:String>
  	
  	<mx:Metadata>
         [Event(name="change", type="flash.events.Event")] 
@@ -16,6 +21,8 @@
 
 	<mx:Script>
 		<![CDATA[
+			import mx.events.ChildExistenceChangedEvent;
+			import mx.events.FlexEvent;
 			import mx.core.UIComponent;
 			import ExtendedAPI.com.utils.FileUtils;
 			import mx.utils.StringUtil;
@@ -24,33 +31,56 @@
 			public static const MODE_SAVE:String = "save";
 			public static const MODE_DIR:String = "dir";
 			public static const MODE_MULTI:String = "multi";
+			
 			public static var memPath:String = File.documentsDirectory.nativePath;
-			
-			private var _enabled:Boolean;		
-			
-			[Inspectable(category="General", enumeration="true,false", defaultValue="true")]
-    		[Bindable("enabledChanged")] 
-			
+
+			public var files:Array = [];
+			public var filterArray:Array = [];
+
+		    //----------------------------------
+		    //  enabled
+		    //----------------------------------
+		
+		    /**
+		     *  @private
+		     */			
 			override public function get enabled():Boolean
 			{
-				return _enabled;
+				return super.enabled;
 			}
 			override public function set enabled(value:Boolean):void
 			{
-				if(_enabled != value)
-				{				
-					_enabled = value;
-					for each (var child:UIComponent in getChildren())
-						child.enabled = value;
-				}
+				super.enabled = value;
+				
+				for each (var child:UIComponent in getChildren())
+					child.enabled = value;
 			}	
-						
-			public var files:Array = [];
-			public var filterArray:Array = [];
-		
+			
+		    //--------------------------------------------------------------------------
+		    //
+		    //  Event handlers
+		    //
+		    //--------------------------------------------------------------------------
+			
+			private function onPreinitialize(event:Event):void
+			{
+				text = memPath;
+			}
+			
+			private function onChildAdd(event:ChildExistenceChangedEvent):void
+			{
+				UIComponent(event.relatedObject).enabled = enabled;
+			}
+			
+			private function onInputTextChange(event:Event):void
+			{
+				text = txtInput.text; 
+				dispatchEvent(new Event(Event.CHANGE));
+			}
+			
 			private function onBrowseClick(event:MouseEvent):void
 			{			
-            	var file:File = new File(File.documentsDirectory.nativePath);
+            	var file:File;
             	
             	if(text)
             	{
@@ -58,11 +88,14 @@
             			file = new File(text);
 	    
 	            		if(!file.exists)
-    	        			file = new File(File.documentsDirectory.nativePath);
+    	        			file = null;
             		} catch(e:*) {
-            			file = new File(File.documentsDirectory.nativePath);
+            			file = null;
             		}
             	}
+            	
+            	if(!file)
+            		file = new File(File.documentsDirectory.nativePath);
             	
             	var filter:FileFilter = new FileFilter(
             		StringUtil.substitute("{0} ({1})", filterAll, "*.*"), 
@@ -73,6 +106,8 @@
 				file.addEventListener(Event.SELECT, onSelect);
 				file.addEventListener(FileListEvent.SELECT_MULTIPLE, onMultiSelect);
 				
+				//	use try..catch block to prevent browse exception 
+				//	(Only one file browsing session may be performed at a time.)				 
 				try
 				{
 					switch(mode.toLowerCase())
@@ -80,18 +115,20 @@
 						case 'save':
 							file.browseForSave(browseTitle);
 							break;
+							
 						case 'dir':
 							file.browseForDirectory(browseTitle);
 							break;
+							
 						case 'multi':
 							file.browseForOpenMultiple(browseTitle, filters);
-							break;						
+							break;
+													
 						default:
 							file.browseForOpen(browseTitle, filters);
 					}
 				} 
-				catch(e:*) 
-				{}
+				catch(e:*){}
 			}
 				    
 		    private function onSelect(event:Event):void
@@ -111,17 +148,29 @@
 		    private function onMultiSelect(event:FileListEvent):void
             {
             	files = event.files;
-            	memPath = File(files[0]).nativePath;
+            	
+            	if(files && files.length)
+            	{
+	           		memPath = File(files[0]).parent.nativePath;
+					txtInput.text = memPath;
+	
+					txtInput.dispatchEvent(new Event(Event.CHANGE));
+            	}
+            	
             	dispatchEvent(new FileListEvent(FileListEvent.SELECT_MULTIPLE));
             }					
             
 		]]>
 	</mx:Script>
 	
-	<mx:TextInput width="100%" id="txtInput" text="{text}"  
-		change="text=txtInput.text; dispatchEvent(new Event(Event.CHANGE));"/>
-	<mx:Button label="{browseLabel}" 
+	<mx:TextInput id="txtInput"
+		width="100%"   
+		text="{text}" 
+		change="onInputTextChange(event)"/>
+		
+	<mx:Button id="btnBrowse"
+		label="{browseLabel}"		
 		paddingLeft="2" paddingRight="2" paddingTop="0" paddingBottom="0" 
-		id="btnBrowse"
 		click="onBrowseClick(event)"/>
+		
 </mx:HBox>
