--- a/IDE/v.01Core/src/net/vdombox/ide/view/controls/ApplicationItemRenderer.mxml
+++ b/IDE/v.01Core/src/net/vdombox/ide/view/controls/ApplicationItemRenderer.mxml
@@ -2,32 +2,82 @@
 <mx:Canvas 
 	xmlns:mx="http://www.adobe.com/2006/mxml"
 	
-	height="130" minWidth="250" width="300" color="#FFFFFF" addedToStage="addedToStageHandler( event )">
+	height="130" minWidth="250" width="300"
+	
+	color="#FFFFFF">
 	<mx:Script>
 		<![CDATA[
-			public static const RENDERER_CREATED:String = "rendererCreated";
-			
-			public function addedToStageHandler( event : Event ) : void
+			import net.vdombox.ide.events.ApplicationItemRendererEvent;
+			public static const ICON_CHANGED : String = "icon changed";
+
+			override public function set data( value : Object ) : void
 			{
-				var evnt : Event = new Event( RENDERER_CREATED );
-				dispatchEvent( evnt ); 
+				var currentIconID : String;
+				var newIconID : String;
+
+				try
+				{
+					appName.text = value.Information.Name[ 0 ];
+					appDesc.text = value.Information.Description[ 0 ];
+				}
+				catch ( error : Error )
+				{
+
+				}
+
+				try
+				{
+					if ( data )
+						currentIconID = data.Information.Icon[ 0 ];
+				}
+				catch ( error : Error )
+				{
+				}
+
+				try
+				{
+					if ( value )
+						newIconID = value.Information.Icon[ 0 ];
+				}
+				catch ( error : Error )
+				{
+				}
+
+				super.data = value;
+
+				if ( newIconID && newIconID != currentIconID )
+				{
+					applicationIcon.source = null;
+					var aire : ApplicationItemRendererEvent = new ApplicationItemRendererEvent( ICON_CHANGED );
+					aire.iconID = newIconID;
+					dispatchEvent( aire );
+				}
 			}
 		]]>
 	</mx:Script>
 	<mx:Image 
-		height="100" width="100" x="10" y="10"/>
-	<mx:VBox left="120" right="10" top="10" bottom="10">
+		id="applicationIcon"
+		
+		height="100" width="100" x="10" y="10"
+		alpha="1.0"/>
+	<mx:VBox 
+		bottom="10" left="120" right="10" top="10">
 		<mx:Label 
-			text="Sample application #1" y="10"
+			id="appName"
 			
-			fontFamily="Tahoma" fontSize="12" fontWeight="bold" left="120" right="10" width="100%" truncateToFit="true"/>
-		<mx:Text
-			text="This application is only example and does not work at all. Please do not delete or change this application!"
-			truncateToFit="true"
-			left="120" width="100%" height="50"/>
+			text="Sample application #1" truncateToFit="true" width="100%" y="10"
+			
+			fontFamily="Tahoma" fontSize="12" fontWeight="bold" left="120" right="10"/>
 		<mx:Text 
-			text="Pages: 20&#xa;Objects: 40"
+			id="appDesc"
 			
-			bottom="10" right="10" textAlign="right" width="100%"/>
+			height="50" text="This application is only example and does not work at all. Please do not delete or change this application!"
+			truncateToFit="true" width="100%"
+			
+			left="120"/>
+		<mx:Text 
+			text="Pages: 20&#xa;Objects: 40" width="100%"
+			
+			bottom="10" right="10" textAlign="right"/>
 	</mx:VBox>
 </mx:Canvas>
