--- a/Help/Editor/v.01/src/AddProduct.mxml
+++ b/Help/Editor/v.01/src/AddProduct.mxml
@@ -89,6 +89,8 @@
 				{
 					sqlProxy.addProduct(productName.text, '0', productTitle.text,
 						productDescription.text,  productLanguage.text );
+					sqlProxy.addPage(productName.text, productLanguage.text, productName.text, 0, productTitle.text,
+								"Description of " + productTitle.text, "It is " + productTitle.text); 
 					dispatchEvent(new CloseEvent(CloseEvent.CLOSE));
 				} else
 				{
